; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_execReplication.c_RelationFindReplTupleByIndex.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_execReplication.c_RelationFindReplTupleByIndex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i32 }
%struct.TYPE_15__ = type { i32, i32 }
%struct.TYPE_14__ = type { i32 }

@INDEX_MAX_KEYS = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@ForwardScanDirection = common dso_local global i32 0, align 4
@XLTW_None = common dso_local global i32 0, align 4
@LockWaitBlock = common dso_local global i32 0, align 4
@LOG = common dso_local global i32 0, align 4
@ERRCODE_T_R_SERIALIZATION_FAILURE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [93 x i8] c"tuple to be locked was already moved to another partition due to concurrent update, retrying\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"concurrent update, retrying\00", align 1
@.str.2 = private unnamed_addr constant [28 x i8] c"concurrent delete, retrying\00", align 1
@ERROR = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [34 x i8] c"attempted to lock invisible tuple\00", align 1
@.str.4 = private unnamed_addr constant [39 x i8] c"unexpected table_tuple_lock status: %u\00", align 1
@NoLock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RelationFindReplTupleByIndex(i32 %0, i32 %1, i32 %2, %struct.TYPE_13__* %3, %struct.TYPE_13__* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_13__*, align 8
  %10 = alloca %struct.TYPE_13__*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_15__, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca %struct.TYPE_14__, align 4
  %19 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store %struct.TYPE_13__* %3, %struct.TYPE_13__** %9, align 8
  store %struct.TYPE_13__* %4, %struct.TYPE_13__** %10, align 8
  %20 = load i32, i32* @INDEX_MAX_KEYS, align 4
  %21 = zext i32 %20 to i64
  %22 = call i8* @llvm.stacksave()
  store i8* %22, i8** %11, align 8
  %23 = alloca i32, i64 %21, align 16
  store i64 %21, i64* %12, align 8
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* @RowExclusiveLock, align 4
  %26 = call i32 @index_open(i32 %24, i32 %25)
  store i32 %26, i32* %16, align 4
  %27 = bitcast %struct.TYPE_15__* %14 to i64*
  %28 = load i64, i64* %27, align 4
  %29 = call i32 @InitDirtySnapshot(i64 %28)
  %30 = load i32, i32* %6, align 4
  %31 = load i32, i32* %16, align 4
  %32 = load i32, i32* %16, align 4
  %33 = call i32 @IndexRelationGetNumberOfKeyAttributes(i32 %32)
  %34 = call i32 @index_beginscan(i32 %30, i32 %31, %struct.TYPE_15__* %14, i32 %33, i32 0)
  store i32 %34, i32* %13, align 4
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* %16, align 4
  %37 = load %struct.TYPE_13__*, %struct.TYPE_13__** %9, align 8
  %38 = call i32 @build_replindex_scan_key(i32* %23, i32 %35, i32 %36, %struct.TYPE_13__* %37)
  br label %39

39:                                               ; preds = %107, %106, %67, %5
  store i32 0, i32* %17, align 4
  %40 = load i32, i32* %13, align 4
  %41 = load i32, i32* %16, align 4
  %42 = call i32 @IndexRelationGetNumberOfKeyAttributes(i32 %41)
  %43 = call i32 @index_rescan(i32 %40, i32* %23, i32 %42, i32* null, i32 0)
  %44 = load i32, i32* %13, align 4
  %45 = load i32, i32* @ForwardScanDirection, align 4
  %46 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %47 = call i64 @index_getnext_slot(i32 %44, i32 %45, %struct.TYPE_13__* %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %72

49:                                               ; preds = %39
  store i32 1, i32* %17, align 4
  %50 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %51 = call i32 @ExecMaterializeSlot(%struct.TYPE_13__* %50)
  %52 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %14, i32 0, i32 1
  %53 = load i32, i32* %52, align 4
  %54 = call i64 @TransactionIdIsValid(i32 %53)
  %55 = icmp ne i64 %54, 0
  br i1 %55, label %56, label %59

56:                                               ; preds = %49
  %57 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %14, i32 0, i32 1
  %58 = load i32, i32* %57, align 4
  br label %62

59:                                               ; preds = %49
  %60 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %14, i32 0, i32 0
  %61 = load i32, i32* %60, align 4
  br label %62

62:                                               ; preds = %59, %56
  %63 = phi i32 [ %58, %56 ], [ %61, %59 ]
  store i32 %63, i32* %15, align 4
  %64 = load i32, i32* %15, align 4
  %65 = call i64 @TransactionIdIsValid(i32 %64)
  %66 = icmp ne i64 %65, 0
  br i1 %66, label %67, label %71

67:                                               ; preds = %62
  %68 = load i32, i32* %15, align 4
  %69 = load i32, i32* @XLTW_None, align 4
  %70 = call i32 @XactLockTableWait(i32 %68, i32* null, i32* null, i32 %69)
  br label %39

71:                                               ; preds = %62
  br label %72

72:                                               ; preds = %71, %39
  %73 = load i32, i32* %17, align 4
  %74 = icmp ne i32 %73, 0
  br i1 %74, label %75, label %121

75:                                               ; preds = %72
  %76 = call i32 (...) @GetLatestSnapshot()
  %77 = call i32 @PushActiveSnapshot(i32 %76)
  %78 = load i32, i32* %6, align 4
  %79 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %80 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %79, i32 0, i32 0
  %81 = call i32 (...) @GetLatestSnapshot()
  %82 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %83 = call i32 @GetCurrentCommandId(i32 0)
  %84 = load i32, i32* %8, align 4
  %85 = load i32, i32* @LockWaitBlock, align 4
  %86 = call i32 @table_tuple_lock(i32 %78, i32* %80, i32 %81, %struct.TYPE_13__* %82, i32 %83, i32 %84, i32 %85, i32 0, %struct.TYPE_14__* %18)
  store i32 %86, i32* %19, align 4
  %87 = call i32 (...) @PopActiveSnapshot()
  %88 = load i32, i32* %19, align 4
  switch i32 %88, label %116 [
    i32 129, label %89
    i32 128, label %90
    i32 131, label %107
    i32 130, label %113
  ]

89:                                               ; preds = %75
  br label %120

90:                                               ; preds = %75
  %91 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %18, i32 0, i32 0
  %92 = call i32 @ItemPointerIndicatesMovedPartitions(i32* %91)
  %93 = icmp ne i32 %92, 0
  br i1 %93, label %94, label %100

94:                                               ; preds = %90
  %95 = load i32, i32* @LOG, align 4
  %96 = load i32, i32* @ERRCODE_T_R_SERIALIZATION_FAILURE, align 4
  %97 = call i32 @errcode(i32 %96)
  %98 = call i32 @errmsg(i8* getelementptr inbounds ([93 x i8], [93 x i8]* @.str, i64 0, i64 0))
  %99 = call i32 @ereport(i32 %95, i32 %98)
  br label %106

100:                                              ; preds = %90
  %101 = load i32, i32* @LOG, align 4
  %102 = load i32, i32* @ERRCODE_T_R_SERIALIZATION_FAILURE, align 4
  %103 = call i32 @errcode(i32 %102)
  %104 = call i32 @errmsg(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0))
  %105 = call i32 @ereport(i32 %101, i32 %104)
  br label %106

106:                                              ; preds = %100, %94
  br label %39

107:                                              ; preds = %75
  %108 = load i32, i32* @LOG, align 4
  %109 = load i32, i32* @ERRCODE_T_R_SERIALIZATION_FAILURE, align 4
  %110 = call i32 @errcode(i32 %109)
  %111 = call i32 @errmsg(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0))
  %112 = call i32 @ereport(i32 %108, i32 %111)
  br label %39

113:                                              ; preds = %75
  %114 = load i32, i32* @ERROR, align 4
  %115 = call i32 (i32, i8*, ...) @elog(i32 %114, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.3, i64 0, i64 0))
  br label %120

116:                                              ; preds = %75
  %117 = load i32, i32* @ERROR, align 4
  %118 = load i32, i32* %19, align 4
  %119 = call i32 (i32, i8*, ...) @elog(i32 %117, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.4, i64 0, i64 0), i32 %118)
  br label %120

120:                                              ; preds = %116, %113, %89
  br label %121

121:                                              ; preds = %120, %72
  %122 = load i32, i32* %13, align 4
  %123 = call i32 @index_endscan(i32 %122)
  %124 = load i32, i32* %16, align 4
  %125 = load i32, i32* @NoLock, align 4
  %126 = call i32 @index_close(i32 %124, i32 %125)
  %127 = load i32, i32* %17, align 4
  %128 = load i8*, i8** %11, align 8
  call void @llvm.stackrestore(i8* %128)
  ret i32 %127
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @index_open(i32, i32) #2

declare dso_local i32 @InitDirtySnapshot(i64) #2

declare dso_local i32 @index_beginscan(i32, i32, %struct.TYPE_15__*, i32, i32) #2

declare dso_local i32 @IndexRelationGetNumberOfKeyAttributes(i32) #2

declare dso_local i32 @build_replindex_scan_key(i32*, i32, i32, %struct.TYPE_13__*) #2

declare dso_local i32 @index_rescan(i32, i32*, i32, i32*, i32) #2

declare dso_local i64 @index_getnext_slot(i32, i32, %struct.TYPE_13__*) #2

declare dso_local i32 @ExecMaterializeSlot(%struct.TYPE_13__*) #2

declare dso_local i64 @TransactionIdIsValid(i32) #2

declare dso_local i32 @XactLockTableWait(i32, i32*, i32*, i32) #2

declare dso_local i32 @PushActiveSnapshot(i32) #2

declare dso_local i32 @GetLatestSnapshot(...) #2

declare dso_local i32 @table_tuple_lock(i32, i32*, i32, %struct.TYPE_13__*, i32, i32, i32, i32, %struct.TYPE_14__*) #2

declare dso_local i32 @GetCurrentCommandId(i32) #2

declare dso_local i32 @PopActiveSnapshot(...) #2

declare dso_local i32 @ItemPointerIndicatesMovedPartitions(i32*) #2

declare dso_local i32 @ereport(i32, i32) #2

declare dso_local i32 @errcode(i32) #2

declare dso_local i32 @errmsg(i8*) #2

declare dso_local i32 @elog(i32, i8*, ...) #2

declare dso_local i32 @index_endscan(i32) #2

declare dso_local i32 @index_close(i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
